@@ -98,6 +98,7 @@ if( is_admin() ) {
 	add_filter( 'body_class','themeblvd_browser_class' );
 	add_filter( 'oembed_result', 'themeblvd_oembed_result', 10, 2 );
 	add_filter( 'embed_oembed_html', 'themeblvd_oembed_result', 10, 2 );
+	add_filter( 'wp_audio_shortcode', 'themeblvd_audio_shortcode' );
 	add_filter( 'wp_feed_cache_transient_lifetime' , 'themeblvd_feed_transient' );
 	add_filter( 'themeblvd_the_content', 'wptexturize' );
 	add_filter( 'themeblvd_the_content', 'wpautop' );
