@@ -16,6 +16,7 @@ Jump Start Changelog
 * In default `content.php` template part, removed anchor tag on post title for single posts.
 * Filtered `wp_link_pages()` to match `themeblvd_pagination()` -- Will only be applied in WP 3.6+
 * Added responsive support for self-hosted videos. -- For WP 3.6+
+* Added responsive support for self-hosted audio files. -- For WP 3.6+
 
 1.0.2
 -----
